src/index.css
:root {
  --accent: #EF540D;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  position: relative;
}

html {
  height: 100%;
  font: 87.5%/1.5 -apple-system, "BlinkMacSystemFont", "SF UI", "Helvetica Neue", sans-serif;
  -webkit-text-size-adjust: 100%;
}

a {
  color: inherit;
}

  a:hover, a:focus {
    color: var(--accent);
  }

p {
  margin-bottom: 1.5rem;
}

.site-title {
  font-weight: 400;
  font-size: 1rem;
}

  .site-title a {
    text-decoration: none;
    border-bottom: 2px solid #ccc;
  }

    .site-title a:hover, .site-title a:focus {
      border-bottom-color: inherit;
    }

.site-root {
  display: flex;
  flex-flow: column nowrap;
  height: 100%;
}

.site-header {
  padding: 1.5rem;
}

.site-content {
  flex: 1 0 auto;
  display: table-row;
  overflow-x: scroll;
  -webkit-overflow-scrolling: touch;
  align-items: baseline;
  padding-left: 1.5rem;
  padding-bottom: 1.5rem;
}

.pane {
  display: table-cell;
  height: 100%;
  width: auto;
  padding-right: 1.5rem;
  vertical-align: bottom;
}

  .pane--text {
    min-width: 75vw;
    max-width: 30em;
    vertical-align: top;
  }

.pane__image {
  background-color: #eee;
  margin-bottom: 1.5rem;
}

.pane__image img {
  display: block;
  width: auto;
  /* 100vh - (header padding, header text, metadata text, metadata padding */
  height: calc(100vh - (9rem));

  transition: .3s ease opacity;
}

  @media (orientation: portrait) {
    .pane__image img {
      height: calc(95vh - (9rem));
    }
  }

  .pane__image img.is-not-loaded {
    opacity: 0;
  }

.u-mb0 {
  margin-bottom: 0;
}

